# krata

./: Cargo.toml
crates/ctl/src/cli/zone/: launch.rs
crates/daemon/src/: lib.rs
crates/daemon/src/reconcile/guest/: start.rs
crates/daemon/src/reconcile/zone/: start.rs
crates/guest/src/: init.rs
crates/krata/proto/krata/v1/: common.proto
crates/krata/src/: launchcfg.rs
crates/minioci/: Cargo.toml
crates/minioci/src/: data.rs  disk.rs  lib.rs  name.rs  platform.rs  registry.rs  validate.rs
crates/oci/src/: assemble.rs  fetch.rs
crates/oci/src/packer/: cache.rs  mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cfgblk.rs  channel.rs  fs9p.rs  launch.rs  lib.rs
crates/xen/xenclient/examples/: boot.rs
crates/xen/xenclient/src/: tx.rs
crates/xen/xenplatform/src/: lib.rs
crates/xen/xenplatform/src/x86/: pvh.rs
crates/zone/src/: init.rs
